crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_derived_signals_div.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore, mutable } from "@qwik.dev/core";

import { dep } from "./file";
import styles from "./styles.module.css";

export const App = component$((props) => {
  const signal = useSignal(0);
  const store = useStore({});
  const count = props.counter.count;

  return (
    <div
      class={{
        even: count % 2 === 0,
        odd: count % 2 === 1,
        stable0: true,
        hidden: false,
      }}
      staticClass={styles.foo}
      staticDocument={window.document}
      staticText="text"
      staticText2={`text`}
      staticNumber={1}
      staticBoolean={true}
      staticExpr={`text${12}`}
      staticExpr2={typeof `text${12}` === "string" ? 12 : 43}
      signal={signal}
      signalValue={signal.value}
      signalComputedValue={12 + signal.value}
      store={store.address.city.name}
      storeComputed={store.address.city.name ? "true" : "false"}
      dep={dep}
      depAccess={dep.thing}
      depComputed={dep.thing + "stuff"}
      global={globalThing}
      globalAccess={globalThing.thing}
      globalComputed={globalThing.thing + "stuff"}
      noInline={signal.value()}
      noInline2={signal.value + unknown()}
      noInline3={mutable(signal)}
      noInline4={signal.value + dep}
    />
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
const _hf0 = (p0) => 12 + p0.value;
const _hf0_str = "12+p0.value";
const _hf1 = (p0) => p0.address.city.name;
const _hf1_str = "p0.address.city.name";
const _hf2 = (p0) => (p0.address.city.name ? "true" : "false");
const _hf2_str = 'p0.address.city.name?"true":"false"';
import { useStore, mutable } from "@qwik.dev/core";
import { dep } from "./file";
import styles from "./styles.module.css";
const App_component_ckEPmXZlub0 = (props) => {
  const signal = useSignal(0);
  const store = useStore({});
  const count = props.counter.count;
  return /* @__PURE__ */ _jsxSorted(
    "div",
    {
      class: {
        even: count % 2 === 0,
        odd: count % 2 === 1,
        stable0: true,
        hidden: false,
      },
      global: globalThing,
      globalAccess: globalThing.thing,
      globalComputed: globalThing.thing + "stuff",
      noInline: signal.value(),
      noInline2: signal.value + unknown(),
      noInline3: mutable(signal),
      noInline4: signal.value + dep,
      staticDocument: window.document,
    },
    {
      staticClass: styles.foo,
      staticText: "text",
      staticText2: `text`,
      staticNumber: 1,
      staticBoolean: true,
      staticExpr: `text${12}`,
      staticExpr2: typeof `text${12}` === "string" ? 12 : 43,
      signal: signal,
      signalValue: _wrapProp(signal),
      signalComputedValue: _fnSignal(_hf0, [signal], _hf0_str),
      store: _fnSignal(_hf1, [store], _hf1_str),
      storeComputed: _fnSignal(_hf2, [store], _hf2_str),
      dep: dep,
      depAccess: dep.thing,
      depComputed: dep.thing + "stuff",
    },
    null,
    3,
    "u6_0",
  );
};
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"),
);

=== DIAGNOSTICS ===

[]
