crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_drop_side_effects.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import { server$ } from "@qwik.dev/router";
import { clientSupabase } from "supabase";
import { Client } from "openai";
import { secret } from "./secret";
import { sideEffect } from "./secret";

const supabase = clientSupabase();
const dfd = new Client(secret);

(function () {
  console.log("run");
})();
(() => {
  console.log("run");
})();

sideEffect();

export const api = server$(() => {
  supabase.from("ffg").do(dfd);
});

export default component$(() => {
  return <button onClick$={async () => await api()}></button>;
});

=== test.js ===
import { serverQrl } from "@qwik.dev/router";
import { _noopQrlDEV } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
import { sideEffect } from "./secret";
(function () {
  console.log("run");
})();
(() => {
  console.log("run");
})();
sideEffect();
export const api = serverQrl(
  /* @__PURE__ */ _noopQrlDEV("api_server_JonPp043gH0", {
    file: "/user/qwik/src/test.tsx",
    lo: 0,
    hi: 0,
    displayName: "test.tsx_api_server",
  }),
);
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrlDEV(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX", {
    file: "/user/qwik/src/test.tsx",
    lo: 503,
    hi: 575,
    displayName: "test.tsx_test_component",
  }),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_button_q_e_click_XXXXXXXXXXXX");
export const test_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted(
    "button",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrlDEV(
        i_XXXXXXXXXXXX,
        "test_component_button_q_e_click_XXXXXXXXXXXX",
        {
          file: "/user/qwik/src/test.tsx",
          lo: 538,
          hi: 561,
          displayName: "test.tsx_test_component_button_q_e_click",
        },
      ),
    },
    null,
    3,
    "u6_0",
    {
      fileName: "test.tsx",
      lineNumber: 25,
      columnNumber: 10,
    },
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_test_component_button_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { api } from "./test";
export const test_component_button_q_e_click_XXXXXXXXXXXX = async () => await api();

/*
{
  "origin": "test.tsx",
  "name": "test_component_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
